--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL = postgresql://postgres:462s7f2hS@localhost:5432/profsouz-kst-bd?shema=public
+DATABASE_URL = postgresql://postgres:123456@localhost:5432/profsouz-kst-bd?shema=public
 JWT_SECRET = 3@ighn
